# xcore_sdk

examples/: examples.cmake
examples/bare-metal/explorer_board/src/: main.c
examples/bare-metal/explorer_board/src/demos/: uart_demo.c
examples/bare-metal/explorer_board/src/platform/: platform_init_tile1.c
examples/freertos/audio_mux/: audio_mux.cmake
examples/freertos/audio_mux/bsp_config/: bsp_config.cmake
examples/freertos/audio_mux/bsp_config/XCORE-AI-EXPLORER/platform/: driver_instances.h
examples/freertos/audio_mux/bsp_config/XVF3600-EVK/: CMakeLists.txt  evk.cmake  xvf3800_qf60.xn
examples/freertos/audio_mux/bsp_config/XVF3600-EVK/platform/: app_pll_ctrl.c  app_pll_ctrl.h  dac_port.c  driver_instances.c  driver_instances.h  pcal6408a.h  platform_conf.h  platform_init.c  platform_init.h  platform_start.c
examples/freertos/audio_mux/bsp_config/dac/: dac.cmake
examples/freertos/audio_mux/bsp_config/dac/dac3101/: dac3101.c  dac3101.h
examples/freertos/audio_mux/src/: FreeRTOSConfig.h  app_conf.h  app_conf_check.h  main.c
examples/freertos/audio_mux/src/usb/: adaptive_rate_adjust.c  usb_audio.c
examples/freertos/explorer_board/src/: app_conf.h  main.c
examples/freertos/explorer_board/src/uart/: uart_demo.c
examples/spectrum/: spectrum.cmake  xvf3610_qf60a.xn
examples/spectrum/src/: app_conf.h  hub75.c  hub75.h  main.c  mic_array.cpp  mic_array_task.c  mic_array_task.h  platform_init.h  tile_support.h
examples/spectrum/src/vnr_features/: gen_mel_filters.py  hanning_1024.h  mel_filter_1024_64_compact.h  mel_filter_2048_128_compact.h  mel_filter_2048_64_compact.h  vnr_defines.h  vnr_features.c  vnr_features_priv.c  vnr_features_state.h
modules/hil/lib_uart/api/: uart.h
modules/hil/lib_uart/src/: uart_rx.c  uart_tx.c
modules/rtos/: CMakeLists.txt
modules/rtos/bsp_config/XCORE-AI-EXPLORER_2V0/platform/: driver_instances.c  driver_instances.h  platform_init.c
modules/rtos/drivers/uart/: CMakeLists.txt
modules/rtos/drivers/uart/api/: rtos_i2c_master_rpc.h  rtos_uart_rx.h  rtos_uart_tx.h
modules/rtos/drivers/uart/src/: rtos_uart_rx.c  rtos_uart_tx.c
test/rtos_drivers/hil_add/: hil_add.cmake  test_verify_uart_results.py
test/rtos_drivers/hil_add/src/: board_init.c  main.c
test/rtos_drivers/hil_add/src/individual_tests/uart/: uart_test.c  uart_test.h
